# Forza-Horizon-DualSense-Python

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  linux_start.sh  mac_start.sh  win_start.bat
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ReadmeJA.md  ReadmeTR.md  ReadmeZH.md
packaging/windows/: fhds.spec
src/: main.py  pyproject.toml  test_dsx.py
src/lang/: fr.py  ja.py  ru.py  tr.py  zh.py  zh_tw.py
src/modules/: __init__.py  loop.py  preferences.py  profiles.py  settings.py  update_check.py
src/modules/config/: paths.py  preferences.py  settings.py
src/modules/dsx/: __init__.py  client.py  main.py  trigger_map.py
src/modules/dualsense/: _hidraw.py  hidhide.py  main.py  triggers.py
src/modules/forzahorizon/: effects.py
src/modules/gui/: app.py  labels.py  logs_tab.py  main.py  settings_tab.py  system_tab.py  theme.py  tray.py  webview_gui.py  widgets.py
src/modules/gui/web/: index.html
src/modules/tui/: controller_prompt.py  controls_tab.py  main.py  settings_tab.py  system_tab.py
src/modules/udplistener/: main.py
src/tests/: test_gui_lifecycle.py  test_gui_smoke.py  test_profiles.py
